Fixed problem with links not wrapping when device width was too small

--- a/styles.less
+++ b/styles.less
@@ -161,6 +161,7 @@ footer {
 .blue_link {
 	a {
 		color: @link-color;
+		overflow-wrap: break-word;
 	}
 
 	a:hover {
